# millionaire

./: .env.example  .gitignore  README.md  pyproject.toml  start.sh  ülesande_valideerimine.md
.github/workflows/: pages.yml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routes/: assignments.py  game.py
backend/app/services/: assignment_loader.py  fallback_questions.json  game_logic.py  question_bank.py  question_generator.py
backend/tests/: test_assignment_loader.py  test_game_logic.py  test_question_bank.py  test_question_generator.py
docs/: architecture.md  backlog.md  definition-of-done.md  retrospective.md  testing-notes.md  trello-cards.md
docs/iterations/: iteration-0-setup.md  iteration-1-mvp.md  iteration-2-ai.md  iteration-3-question-banks.md  iteration-4-ui-modernization.md  iteration-5-github-pages.md  iteration-6-quit-and-polish.md
frontend/: assignments.json  index.html
frontend/css/: style.css
frontend/js/: api.js  engine.js  main.js
frontend/js/ui/: game.js  menu.js  result.js
input/001/: assignment.md  index.html  learning-outcomes.md  questions-hard.json  questions.json  script.js  style.css
input/002/: assignment.md  index.html  questions.json
input/002/src/: app.js  data.json
input/003/: README.md  assignment.md  questions.json
input/003/solution/: main.py
prompts/: question-generation.md
